syntax = "proto3";

package rv.data;

option cc_enable_arenas = true;
option csharp_namespace = "Pro.SerializationInterop.RVProtoData";
option swift_prefix = "RVData_";

import "uuid.proto";

message CollectionElementType {
  .rv.data.UUID parameter_uuid = 1;
  string parameter_name = 2;
}

